<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:id="@+id/singup">

    <ImageButton
        android:layout_width="18dp"
        android:layout_height="12dp"
        android:layout_marginRight="122.5dp"
        android:layout_marginTop="46dp"
        android:layout_marginLeft="20dp"
        android:layout_alignParentLeft="true"
        android:src="@drawable/menu_icon"
        android:background="@color/transparent"/>

    <TextView
        android:id="@+id/login_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="45dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/welcome_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_nsing_up_now"
        android:textSize="36sp"
        android:layout_marginVertical="120dp"
        android:textColor="@color/white"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="123dp"
        android:fontFamily="@font/roboto_light"
        android:layout_alignParentLeft="true"/>

    <EditText
        android:id="@+id/username_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="244dp"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/username"
        android:paddingVertical="29dp"
        android:textSize="16sp"
        android:background="@drawable/outline_stroke" />

    <EditText
        android:id="@+id/email_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/username_txt"
        android:layout_marginHorizontal="40dp"
        android:paddingVertical="29dp"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_light"
        android:background="@drawable/outline_stroke" />

    <EditText
        android:id="@+id/password_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/email_txt"
        android:layout_marginHorizontal="40dp"
        android:paddingVertical="29dp"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_light"
        android:background="@drawable/outline_stroke" />

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_txt"
        android:layout_marginHorizontal="40dp">
        <EditText
            android:id="@+id/country_txt"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country"
            android:paddingVertical="29dp"
            android:layout_marginRight="12dp"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_light"
            android:background="@drawable/outline_stroke" />

        <EditText
            android:layout_weight="1"
            android:id="@+id/zip_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zip_code"
            android:paddingVertical="29dp"
            android:layout_marginLeft="12dp"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_light"
            android:background="@drawable/outline_stroke" />
    </LinearLayout>

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:text="@string/sing_up"
        android:textAllCaps="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/white_button"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16sp"
        android:textColor="@color/coral"/>

    <TextView
        android:id="@+id/account_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="74dp"
        android:layout_marginBottom="22dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/allready_have_an_account"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" LOG IN!"
        android:layout_toRightOf="@+id/account_txt"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="22dp"
        android:layout_marginRight="70dp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_light"
        android:textSize="12sp"
        android:textColor="@color/white"/>

</RelativeLayout>