<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_secondary">

    <RelativeLayout
        android:id="@+id/profile_header"
        android:layout_width="match_parent"
        android:layout_height="365dp"
        android:background="@drawable/gradient_background">

        <ImageButton
            android:layout_width="18dp"
            android:layout_height="12dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="46dp"
            android:layout_marginRight="122.5dp"
            android:background="@color/transparent"
            android:src="@drawable/menu_icon" />

        <TextView
            android:id="@+id/profile_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="45dp"
            android:layout_marginHorizontal="150dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/profile"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/avatar_swimmer"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"/>

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="240dp"
            android:layout_marginHorizontal="108dp"
            android:text="@string/john_bergen"
            android:textSize="26sp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_light"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="282dp"
            android:layout_marginHorizontal="108dp"
            android:text="@string/new_york_ny"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_light"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/about_section"
        android:layout_width="340dp"
        android:layout_height="168dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="321dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="16sp"
            android:textColor="@color/coral"
            android:fontFamily="@font/roboto_light"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="149dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="49dp"
            android:layout_marginHorizontal="20dp"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_light"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="118dp"
            android:layout_marginHorizontal="80dp">

            <ImageButton
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/twitter_logo_button_2"
                android:background="@color/transparent"/>
            <ImageButton
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/instagram_logo"
                android:background="@color/transparent"
                android:layout_marginLeft="20dp"/>
            <ImageButton
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook_logo_button_2"
                android:background="@color/transparent"
                android:layout_marginLeft="20dp"/>
            <ImageButton
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/google_plus_logo_button"
                android:background="@color/transparent"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/connection_section"
        android:layout_width="340dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="499dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Connections"
            android:textColor="@color/coral"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_light"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="59dp"
            android:layout_marginHorizontal="20dp">

            <ImageView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/avatar_astronaut"/>
            <ImageView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/avatar_detective"
                android:layout_marginLeft="20dp"/>
            <ImageView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/avatar_diver"
                android:layout_marginLeft="20dp"/>
            <ImageView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/avatar_disc_jockey"
                android:layout_marginLeft="20dp"/>

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:layout_width="340dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/gradient_background_button"
        android:text="@string/connect"
        android:textAllCaps="true"
        android:fontFamily="@font/roboto_medium"
        android:textSize="14sp"
        android:textColor="@color/white" />

</RelativeLayout>